
# Version 6.6.1
 * Patched a crash when hovering an invalid "build" (impossible without js but whatever)
 * Fixed invisible/sandbox blocks being impossible to place with payload place mode (\)
 * Major improvements to navigation
 * Fix for fire particles getting out of control, no longer spawns more particles at lower fps, the slider is still there if you want it

# Version 6.6.0
 * Fixed an issue with not enough / too many particles appearing based on fps
 * Improved navigation when assume unstrict is toggled on
 * Added !fuel command with an optional interval in seconds to run /fuel on cn
 * Added !/js command, runs js code on the server and the client (sends /js to the server, will not work if that command doesnt exist or you dont have permission)
 * Long names in the player list now wrap
 * Fixed an impossibly rare edge case where core items were formatted wrong if the team had exactly -2147483648 of them
 * Parallaxes now move the player again
 * Fixed an issue with logic virus warnings appearing when peeking into a logic block
 * Power split notifications now work with SHIFT + Z
 * Fixed bridge clicking and dragging not linking with nearby bridges
 * Added some additional icons to :emote: autocomplete 
 * Improved logic virus detection
 * Larger schematics (>1024 blocks) are automatically deselected when placed, hold SHIFT to place multiple
 * Reworked hints some more, added some new ones
 * Fixed a bug where encrypted messages would appear more than once
 * Changes to the encrypted message system to allow it to work through a plugin
 * Fixed a crash with buildpath
 * Lots of cleanup internally
 * Probably more stuff I missed
 * Updated to v126.2

# Version 6.5.3
 * Changed icons for encrypted and verified messages
 * Fixed a bug in buildpath
 * Fixed discord rich presence not starting on client launch when not on steam
 * Fixed logic virus warnings being incredibly spammy
 * Removed virus removal messages, those were just annoying