@@ -910,6 +910,7 @@ setting.autoupdate.name = Automatically Check For Updates
 setting.discordrpc.name = Discord Rich Presence
 setting.allowjoinany.name = Join Servers On Any Version[lightgray] (will break stuff)[]
 setting.debug.name = Enable Debug Log Messages[lightgray] (don't use this)[]
+setting.unlockallachievements.name = Unlock All Achievements[lightgray] (this cannot be undone!)[]
 # End Client Settings
 
 
